# ERP

./: ERP_database.sql  Naming_Convention_guide.md  README.md  animation.py  file_test.py  gestion_ventes_ma.sql  main.py  makefile  paths.py  pyproject.toml  requirements.txt  res.qrc  resources.qrc  resources_rc.py  test.py  test2.py  theme_manager.py  tools.py
Program/: __init__.py
Program/services/: db_connection.py  db_helper_funcs.py
Program/themes/: dark.json  light.json
Program/windows/clients/: add_facture.py  clients_factures.ui
Program/windows/dashboard/: dashboard.py  dashboard.ui
Program/windows/login/: login.py  login.qrc  login.ui  login_funcs.py
Program/windows/main_menu/: main_menu.ui
info/: .env.example
login_page/: Login_page_window.py  login_screen.ui  login_ui.py  main.py  res.qrc
old/: pyproject.toml  requirements.txt
old/info/: .env.example
old/login_page/: login_screen.ui  login_ui.py  main.py  res.qrc
program/: __init__.py
program/services/: __init__.py  audit.py  document_num_generator.py  messagebox.py  ndoc_generator.py  paths.py  sql_db_tables.py
program/services/sql/: ERP_database.sql  create_db.py  db_connection.py  fill_database.sql  sql_db_tables.py
program/services/widgetstyles/: lineedit_combo_style.py  shared_input_popup_style.py
program/themes/: __init__.py  shared_input_popup_style.py  theme_manager.py  widget_style_tokens.json
program/widgetstyles/: lineedit_combo_style.py  test.py
system/themes/: dark.json
zsh/: articles_funcs.py  documents_funcs.py  familles_funcs.py  utilisateurs_funcs.py
(+57 files in other folders)
