[project]
name = "ERP"
version = "0.1.0"
description = "ERP System with PyQt5 GUI"
requires-python = ">=3.8,<3.14"
dependencies = [
    "PyQt5==5.15.10",
    "PyQt5-Qt5==5.15.2",
    "PyQt5-sip==12.15.0",
    "pymysql==1.1.0",
    "python-dotenv==1.0.0",
    "mysql-connector-python==8.3.0",
    "SQLAlchemy>=2.0.46",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.poetry]
package-mode = false